# hydrus-ocr

./: CHANGELOG.md  LICENSE.md  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  lint.yml  pylint.yml
hydrus_ocr/: __init__.py  __main__.py  errors.py
